--- a/Auto Care/Base.lproj/Main.storyboard
+++ b/Auto Care/Base.lproj/Main.storyboard
@@ -118,64 +118,70 @@
         <scene sceneID="Uaf-uR-4Rk">
             <objects>
                 <tableViewController id="3pd-Px-yhj" customClass="ItemTableViewController" customModule="Auto_Care" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ITT-dw-8A1">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ITT-dw-8A1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell" rowHeight="128" id="Nqh-Sn-a5L" customClass="ItemTableViewCell" customModule="Auto_Care" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="128"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="tableCell" rowHeight="100" id="Nqh-Sn-a5L" customClass="ItemTableViewCell" customModule="Auto_Care" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Nqh-Sn-a5L" id="q1E-wg-T4t">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="128"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="383" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SCP-wB-IKC">
-                                            <rect key="frame" x="10" y="11" width="100" height="106"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7mL-61-fWw">
+                                            <rect key="frame" x="10" y="5" width="120" height="90"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="80" id="MbN-Bs-ta3"/>
-                                                <constraint firstAttribute="width" constant="100" id="X7C-Co-UlS"/>
+                                                <constraint firstAttribute="height" constant="90" id="H2l-5v-QNP"/>
+                                                <constraint firstAttribute="width" constant="120" id="kOI-R2-dd5"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ju-hI-wE9">
-                                            <rect key="frame" x="140" y="22" width="45" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Item Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sep-TQ-1P0">
+                                            <rect key="frame" x="138" y="11" width="183" height="21"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7b6-ou-KTR">
-                                            <rect key="frame" x="344" y="82" width="50" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cWP-O1-ANx">
-                                            <rect key="frame" x="140" y="70" width="88" height="25"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ef-3E-dvg">
+                                            <rect key="frame" x="138" y="45" width="234" height="50"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="25" id="0CR-wu-LF9"/>
+                                                <constraint firstAttribute="height" constant="50" id="Uq5-87-d3Y"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wa8-bN-ab0">
+                                            <rect key="frame" x="319" y="42" width="44" height="16"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="62" id="541-i9-9jZ"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="1ju-hI-wE9" firstAttribute="top" secondItem="q1E-wg-T4t" secondAttribute="topMargin" constant="11" id="26c-y9-pKg"/>
-                                        <constraint firstItem="cWP-O1-ANx" firstAttribute="leading" secondItem="SCP-wB-IKC" secondAttribute="trailing" constant="30" id="49f-9L-yDS"/>
-                                        <constraint firstItem="SCP-wB-IKC" firstAttribute="top" secondItem="q1E-wg-T4t" secondAttribute="top" constant="11" id="CiQ-mj-P4l"/>
-                                        <constraint firstAttribute="bottom" secondItem="SCP-wB-IKC" secondAttribute="bottom" constant="11" id="W5K-iT-OaL"/>
-                                        <constraint firstItem="1ju-hI-wE9" firstAttribute="leading" secondItem="SCP-wB-IKC" secondAttribute="trailing" constant="30" id="YV1-mM-xdV"/>
-                                        <constraint firstItem="cWP-O1-ANx" firstAttribute="top" secondItem="1ju-hI-wE9" secondAttribute="bottom" constant="27" id="cJX-Tz-0yM"/>
-                                        <constraint firstItem="SCP-wB-IKC" firstAttribute="leading" secondItem="q1E-wg-T4t" secondAttribute="leading" constant="10" id="mwS-ZO-1pQ"/>
-                                        <constraint firstItem="1ju-hI-wE9" firstAttribute="leading" secondItem="SCP-wB-IKC" secondAttribute="trailing" constant="30" id="yke-R5-KUh"/>
+                                        <constraint firstAttribute="trailing" secondItem="2ef-3E-dvg" secondAttribute="trailing" constant="11" id="BTf-9J-pxd"/>
+                                        <constraint firstAttribute="bottom" secondItem="2ef-3E-dvg" secondAttribute="bottom" constant="5" id="UIP-Nf-qK6"/>
+                                        <constraint firstItem="7mL-61-fWw" firstAttribute="leading" secondItem="q1E-wg-T4t" secondAttribute="leading" constant="10" id="UwZ-ag-c9q"/>
+                                        <constraint firstItem="sep-TQ-1P0" firstAttribute="width" secondItem="2ef-3E-dvg" secondAttribute="width" multiplier="0.782051" id="XmS-Ef-7ki"/>
+                                        <constraint firstAttribute="trailing" secondItem="sep-TQ-1P0" secondAttribute="trailing" constant="62" id="ZRd-5J-i30"/>
+                                        <constraint firstItem="sep-TQ-1P0" firstAttribute="top" secondItem="q1E-wg-T4t" secondAttribute="topMargin" id="aL7-eJ-zDN"/>
+                                        <constraint firstItem="Wa8-bN-ab0" firstAttribute="leading" secondItem="7mL-61-fWw" secondAttribute="trailing" constant="189" id="hjO-z6-8GR"/>
+                                        <constraint firstItem="7mL-61-fWw" firstAttribute="centerY" secondItem="q1E-wg-T4t" secondAttribute="centerY" id="krP-WP-Ewu"/>
+                                        <constraint firstItem="sep-TQ-1P0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="7mL-61-fWw" secondAttribute="trailing" constant="8" symbolic="YES" id="nmo-HI-z7L"/>
+                                        <constraint firstItem="2ef-3E-dvg" firstAttribute="leading" secondItem="7mL-61-fWw" secondAttribute="trailing" constant="8" id="srr-Bi-V7O"/>
+                                        <constraint firstItem="Wa8-bN-ab0" firstAttribute="centerY" secondItem="q1E-wg-T4t" secondAttribute="centerY" id="vdo-6M-lTB"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Wa8-bN-ab0" secondAttribute="trailing" constant="20" symbolic="YES" id="xDt-ct-65I"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="ItemDescription" destination="cWP-O1-ANx" id="4OK-3g-Jtp"/>
-                                    <outlet property="ItemPriceText" destination="7b6-ou-KTR" id="XtU-Dp-Ocl"/>
-                                    <outlet property="itemImage" destination="SCP-wB-IKC" id="da3-eM-fn7"/>
-                                    <outlet property="itemNameText" destination="1ju-hI-wE9" id="gBp-n1-LBr"/>
+                                    <outlet property="itemDescriptionText" destination="2ef-3E-dvg" id="Is8-Z3-YXr"/>
+                                    <outlet property="itemImageView" destination="7mL-61-fWw" id="hZe-e0-JDh"/>
+                                    <outlet property="itemNameText" destination="sep-TQ-1P0" id="91T-VX-eUy"/>
+                                    <outlet property="itemPriceText" destination="Wa8-bN-ab0" id="fa9-Af-sfv"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -238,15 +244,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Brand Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dxK-p3-2II">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Brand Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dxK-p3-2II">
                                 <rect key="frame" x="20" y="120" width="374" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="429-aS-iFG">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="429-aS-iFG">
                                 <rect key="frame" x="155" y="264" width="108" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Camera">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -258,6 +262,14 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="429-aS-iFG" firstAttribute="leading" secondItem="85q-qi-XH1" secondAttribute="leading" constant="155" id="AU7-yb-Gx9"/>
+                            <constraint firstItem="dxK-p3-2II" firstAttribute="top" secondItem="85q-qi-XH1" secondAttribute="top" constant="32" id="TdD-mi-O0i"/>
+                            <constraint firstItem="dxK-p3-2II" firstAttribute="leading" secondItem="pLk-BU-Q7y" secondAttribute="leadingMargin" id="cQQ-4u-kch"/>
+                            <constraint firstItem="85q-qi-XH1" firstAttribute="trailing" secondItem="429-aS-iFG" secondAttribute="trailing" constant="151" id="fMN-zg-kIt"/>
+                            <constraint firstItem="dxK-p3-2II" firstAttribute="trailing" secondItem="pLk-BU-Q7y" secondAttribute="trailingMargin" id="jaF-VX-Ob5"/>
+                            <constraint firstItem="85q-qi-XH1" firstAttribute="bottom" secondItem="429-aS-iFG" secondAttribute="bottom" constant="519" id="wcR-Zt-LAr"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="85q-qi-XH1"/>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="uX7-Bw-ASQ" appends="YES" id="iXS-cA-Qxl"/>
